fixed allreels in index

--- a/downloader/templates/downloader/index.html
+++ b/downloader/templates/downloader/index.html
@@ -51,7 +51,7 @@
             <p>Download all Photos/Videos/Reels of an Instagram Account.</p>
           </a>
           
-          <a href="/allposts">
+          <a href="/allreels">
             <img src={% static 'downloader/grid-reels.png' %} height="80px"/>
             
             <h2>All Media</h2>
