updated to use instagrapi instead of instaloader

--- a/downloader/templates/downloader/index.html
+++ b/downloader/templates/downloader/index.html
@@ -48,13 +48,13 @@
             <img src={% static 'downloader/grid.png' %} height="80px"/>
 
             <h2>All Media</h2>
-            <p>Download all Photos/Videos/Reels of an Instagram Account.</p>
+            <p>Download all Posts and Current Stories of an Instagram Account.</p>
           </a>
           
           <a href="/allreels">
             <img src={% static 'downloader/grid-reels.png' %} height="80px"/>
             
-            <h2>All Media</h2>
+            <h2>All Reels</h2>
             <p>Download all Reels of an Instagram Account.</p>
           </a>
         </div>
