--- a/downloader/templates/downloader/allreels.html
+++ b/downloader/templates/downloader/allreels.html
@@ -25,7 +25,7 @@
           src="https://cdn-icons-png.flaticon.com/512/717/717392.png"
           class="logo"
         />
-        <span>InstaLoaderWeb</span>
+        <span><a href="/instaloaderweb">Insta-Downloader</a></span>
       </div>
     </header>
     <section class="user-input">
@@ -40,9 +40,9 @@
       </form>
     </section>
     <footer>
-      Made with &#10084;&#65039; in &#127470;&#127475; • InstaLoaderWeb &copy;
+      Based from InstaLoaderWeb &copy;
       <span><a href="https://github.com/AzeemIdrisi">AzeemIdrisi</a></span>
-      2024
+      {{ year }}
     </footer>
     <script>
       document
