--- a/downloader/templates/downloader/index.html
+++ b/downloader/templates/downloader/index.html
@@ -25,7 +25,7 @@
           src="https://cdn-icons-png.flaticon.com/512/717/717392.png"
           class="logo"
         />
-        <span>InstaLoaderWeb</span>
+        <span><a href="/instaloaderweb">Insta-Downloader</a></span>
       </div>
     </header>
     <section class="user-input">
@@ -74,11 +74,16 @@
             <h3 style="text-align: center">{{message}}</h3>
           </form>
         </div>
+        <div>
+          <form action="{% url 'clearsession' %}" method="POST">
+            <button type="submit" id="clearsession">Clear Session</button>
+          </form>
+        </div>
       </div>
     </section>
 
     <footer>
-      Made with &#10084;&#65039; in &#127470;&#127475; • InstaLoaderWeb &copy;
+      Based from InstaLoaderWeb &copy;
       <span><a href="https://github.com/AzeemIdrisi">AzeemIdrisi</a></span>
       {{ year }}
     </footer>
